--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ nav a button {
     font-size: 1rem;
     border: none;
     margin-left: 0%;
-    border-radius: 10%;
+    border-radius: 10rem;
     cursor: pointer;
 }
 
